libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/let-2.jsonc
//@ run: fail
//@ description: let/2 should error out
["::kernel::special_form::let", "x", { "#literal": true }]
//~^ ERROR expected 3 or 4 arguments to `let`, found 2
